--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -1,65 +1,7 @@
+@white: #FFF;
+@black: #000;
+
 body {
-    background-color: #466a5c;
-    color: white;
-}
-
-a, a:visited, a:active {
-    color: white;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.app {
-    margin: 1.5em;
-}
-
-.app.big {
-    font-size: 2em;
-}
-
-.sidebar, .itemlist {
-    color: black;
-    min-height: 300px;
-}
-
-.tabs {
-    background-color: #222222;
-    margin-bottom: 1em;
-    overflow: hidden;
-}
-
-.tabs li {
-    float: left;
-    margin: 0 .25em;
-    padding-top: 4px;
-    border-bottom: 4px solid #BEAA8E;
-}
-
-.tabs a {
-    padding: .5em;
-    display: block;
-}
-
-.tabs a.selected {
-    background-color: #BEAA8E;
-}
-
-.tabs a:hover {
-    background-color: #BEAA8E;
-}
-
-.itemlist {
-    color: white;
-}
-
-ul.itemlist li {
-    padding: 1em;
-    margin-bottom: 1em;
-    background-color: #222222;
+    background-color: @white;
+    color: @black;
 }
